# CosmokeyBot

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f2eeb21433c_change_to_bigint.py  120d1897b67b_create_settings_table.py  20260207_create_bot_tables.py  59c670b753d2_create_request_comments.py  5a63607a8ecf_add_paid_fields_to_rewards.py  69fe47c229e2_add_status_columt_to_rewards.py  6c302b56ee65_alter_rewards_link_nullable.py  846e2ca933c9_add_status_to_assistance_requests.py  992b17639564_add_phone_number.py  a8a0217e38d1_add_text_to_assistance_request.py  b10d9c1e191c_seed_default_messages_text.py  c1835db5eb26_add_admin_comment_to_assistance_request.py  c9ee6616fdfb_add_admin_comment_columt_to_rewards.py
bot/: config.py  main.py
bot/db/: engine.py  messages_text.py  queries.py  tables.py
bot/filters/: is_admin.py  is_customer.py
bot/fsm/: back.py  storage.py
bot/fsm/states/: admin.py  customer.py
bot/keyboards/admin/: admin_menu.py  callback_data.py  special_post_kb.py
bot/keyboards/customer/: gift_kb.py  help_kb.py  main_menu_kb.py  review_kb.py
bot/middlewares/: album.py
bot/routers/admin/: admin_router.py
bot/routers/customer/: customer_router.py
bot/services/admin/: admin_service.py  mailing_service.py  message_service.py  requests_service.py  settings_service.py  stats_service.py
bot/services/customer/: assistance_service.py  (+4 more)
bot/utils/: helpers.py  media_helper.py  media_sender.py  navigation.py
readme-files/: Техническое_Задание_на_Разработку_Telegram.docx
(+14 files in other folders)
