[tool.poetry]
name = "cosmokey-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Valery Onishkov <onishkovfli@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
aiogram = "^3.24.0"
python-dotenv = "^1.2.1"
asyncpg = "^0.31.0"
redis = "^7.1.0"
pydantic = "^2.12.5"
loguru = "^0.7.3"
alembic = "^1.18.3"
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
